# OnScreenOCR

./: .gitignore  Cargo.toml  README.md  build.rs  tray_icon.rc
Installer/: OnScreenOCR.iss  README.md  pre-install_message.txt
src/: clipboard_image.rs  input.rs  main.rs  ocr_handler.rs  renderer.rs  screenshot.rs  selection.rs  settings.rs  shader.wgsl  undo_stack.rs
src/icons/: atlas_positions.txt
src/renderer/: animation.rs  background_renderer.rs  icon_layout_engine.rs  icon_renderer.rs  ocr_preview_renderer.rs
src/renderer/icon_renderer/: icon_layout.rs  icon_layout_engine.rs
src/shaders/: background.wgsl  icons.wgsl
src/wgpu_text/: brush.rs  cache.rs  mod.rs  pipeline.rs
