[package]
name = "BetterOCRTool"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
inputbot = "0.6"
libc = "0.2.155"
pixels = "0.13.0"
# https://github.com/parasyte/pixels/issues/379
winit = { version = "0.30.3", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
