[package]
name = "BetterOCRTool"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
image = "0.25.1"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
leptess = "0.14.0"
libc = "0.2.155"
pixels = "0.13.0"
# https://github.com/parasyte/pixels/issues/379
winit = { version = "0.30.3", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
glyph_brush = "0.7.8"
clipboard = "0.5.0"
windows-sys = "0.52.0"
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive", "rc"] }
clipboard-win = "5.3.1"
toml = "0.8.14"
quick-xml = "0.34.0"
tray-item = "0.10.0"

[build-dependencies]
image = "0.25.1"
embed-resource = "2.3"